# ChromActivity

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml
chromactivity/: __init__.py  chromscorehmm.py  cli.py  dataset.py  expert_model.py  feature_extraction.py  ft_mapping.py  gating_model.py  mappings.py  track_interval.py  utils.py
data/labels/: crispr-k562-fulco.tsv  crispr-k562-gasperini_pval.tsv  mpra-hepg2-ernst.tsv  mpra-hepg2-kheradpour_pval.tsv  mpra-k562-ernst.tsv  mpra-k562-kheradpour_pval.tsv  starr-a549-white.tsv  starr-gm-wang.tsv  starr-helaS3-muerdter.tsv  starr-hepg2-white.tsv  starr-k562-white.tsv
docs/: state_name_mapping.md
models/: chromactivity.model  chromscorehmm.model_15.txt
